tests/ui/proc-macro/signature-proc-macro.stderr
error: mismatched function-like proc macro signature
  --> $DIR/signature-proc-macro.rs:10:25
   |
LL | pub fn bad_input(input: String) -> TokenStream {
   |                         ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: function-like proc macros must have a signature of `fn(TokenStream) -> TokenStream`

error: mismatched function-like proc macro signature
  --> $DIR/signature-proc-macro.rs:16:42
   |
LL | pub fn bad_output(input: TokenStream) -> String {
   |                                          ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: function-like proc macros must have a signature of `fn(TokenStream) -> TokenStream`

error: mismatched function-like proc macro signature
  --> $DIR/signature-proc-macro.rs:22:41
   |
LL | pub fn bad_everything(input: String) -> String {
   |                                         ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: function-like proc macros must have a signature of `fn(TokenStream) -> TokenStream`

error: mismatched function-like proc macro signature
  --> $DIR/signature-proc-macro.rs:22:30
   |
LL | pub fn bad_everything(input: String) -> String {
   |                              ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: function-like proc macros must have a signature of `fn(TokenStream) -> TokenStream`

error: mismatched function-like proc macro signature
  --> $DIR/signature-proc-macro.rs:29:33
   |
LL | pub fn too_many(a: TokenStream, b: TokenStream, c: String) -> TokenStream {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^ found unexpected arguments

error: aborting due to 5 previous errors

